Fix index.html on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -7,10 +7,6 @@
     width: 2rem;
 }
 
-.contact-info {
-    margin-left: -5rem;
-}
-
 .social-media {
     display: block;
     margin-bottom: 1.5rem;
